--- a/portal.conf
+++ b/portal.conf
@@ -27,17 +27,17 @@ server {
 			proxy_pass http://agr.ui.server:2992;
 		}
 
-//		location /neo4j_nqc {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://agr.neo4j.nqc.server:7474;
-//		}
+#		location /neo4j_nqc {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.neo4j.nqc.server:7474;
+#		}
 
-//		location /graphql_nqc {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://agr.neo4j.nqc.server:7474/graphql;
-//		}
+#		location /graphql_nqc {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.neo4j.nqc.server:7474/graphql;
+#		}
 
 
 }
