--- a/portal.conf
+++ b/portal.conf
@@ -4,26 +4,26 @@ server {
 		server_name .alliancegenome.org;
 	
 		location /api {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080;
 		}
 
 		location /neo4j_qc {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.neo4j.qc.server:7474;
 		}
 
 		location /graphql {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.neo4j.qc.server:7474/graphql;
 		}
 
 		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.ui.server:2992;
 		}
 
