--- a/portal.conf
+++ b/portal.conf
@@ -23,7 +23,7 @@ server {
 
 		location / {
 			proxy_set_header Host $host;
-#			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.ui.server:2992;
 		}
 
