--- a/portal.conf
+++ b/portal.conf
@@ -3,11 +3,11 @@ server {
 
 		server_name .alliancegenome.org;
 	
-//		location /api {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://agr.api.server:8080;
-//		}
+		location /api {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080;
+		}
 
 		location /neo4j_nqc {
 			proxy_set_header Host $host;
@@ -15,17 +15,17 @@ server {
 			proxy_pass http://agr.neo4j.nqc.server:7474;
 		}
 
-//		location /neo4j_qc {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://neo4j_qc:7474;
-//		}
+		location /neo4j_qc {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.neo4j.qc.server:7474;
+		}
 
-//		location /graphql {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://neo4j_qc:7474/graphql;
-//		}
+		location /graphql {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.neo4j.qc.server:7474/graphql;
+		}
 
 		location /graphql_nqc {
 			proxy_set_header Host $host;
@@ -33,10 +33,10 @@ server {
 			proxy_pass http://agr.neo4j.nqc.server:7474/graphql;
 		}
 
-//		location / {
-//			proxy_set_header Host $host;
-//			proxy_set_header X-Real-IP $remote_addr;
-//			proxy_pass http://agr.ui.server:2992;
-//		}
+		location / {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.ui.server:2992;
+		}
 
 }
