--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -4,7 +4,7 @@ server {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://localhost:4005;
+			proxy_pass http://dev.alliancegenome.org:4005;
 		}
 }
 server {
@@ -13,7 +13,7 @@ server {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://localhost:4006;
+			proxy_pass http://staging.alliancegenome.org:4006;
 		}
 }
 server {
@@ -22,6 +22,6 @@ server {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://localhost:4007;
+			proxy_pass http://www.alliancegenome.org:4007;
 		}
 }
