Commented unused networks

--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -7,21 +7,21 @@ server {
 			proxy_pass http://agr.nginx.server.dev:4005;
 		}
 }
-server {
-	listen 80;
-		server_name staging.alliancegenome.org;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.staging:4006;
-		}
-}
-server {
-	listen 80;
-		server_name www.alliancegenome.org;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.prod:4007;
-		}
-}
+#server {
+#	listen 80;
+#		server_name staging.alliancegenome.org;
+#		location / {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.nginx.server.staging:4006;
+#		}
+#}
+#server {
+#	listen 80;
+#		server_name www.alliancegenome.org;
+#		location / {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.nginx.server.prod:4007;
+#		}
+#}
