Added new endpoint

--- a/portal.conf
+++ b/portal.conf
@@ -21,6 +21,12 @@ server {
 			proxy_pass http://agr.neo4j.qc.server:7474;
 		}
 
+		location /es {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.elasticsearch.server:9200;
+		}
+
 		location /graphql {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
