Added trailing slashes in order to remove prefix from incoming URL

--- a/portal.conf
+++ b/portal.conf
@@ -6,37 +6,37 @@ server {
 		location /api {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080;
+			proxy_pass http://agr.api.server:8080/api/;
 		}
 
 		location /neo4j_nqc {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.nqc.server:7474;
+			proxy_pass http://agr.neo4j.nqc.server:7474/;
 		}
 
 		location /neo4j_qc {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474;
+			proxy_pass http://agr.neo4j.qc.server:7474/;
 		}
 
 		location /es {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.elasticsearch.server:9200;
+			proxy_pass http://agr.elasticsearch.server:9200/;
 		}
 
 		location /graphql {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/graphql;
+			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
 		}
 
 		location /graphql_nqc {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.nqc.server:7474/graphql;
+			proxy_pass http://agr.neo4j.nqc.server:7474/graphql/;
 		}
 
 		location / {
