Added slashes for URL replacement

--- a/portal.conf
+++ b/portal.conf
@@ -3,37 +3,37 @@ server {
 
 		server_name .alliancegenome.org;
 	
-		location /api {
+		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/api/;
 		}
 
-		location /neo4j_nqc {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.nqc.server:7474/;
-		}
-
-		location /neo4j_qc {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/;
-		}
-
-		location /es {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.elasticsearch.server:9200/;
-		}
-
-		location /graphql {
+		location /graphql/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
 		}
 
-		location /graphql_nqc {
+		location /neo4j_nqc/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.neo4j.nqc.server:7474/;
+		}
+
+		location /neo4j_qc/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.neo4j.qc.server:7474/;
+		}
+
+		location /es/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.elasticsearch.server:9200/;
+		}
+
+		location /graphql_nqc/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.neo4j.nqc.server:7474/graphql/;
