Added api paths

--- a/portal.conf
+++ b/portal.conf
@@ -2,11 +2,29 @@ server {
 	listen 80;
 
 		server_name .alliancegenome.org;
-	
+
+		location /api/index.html {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/index.html;
+		}
+
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/api/;
+		}
+
+		location /swagger-ui/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/swagger-ui/;
+		}
+
+		location /graphql-ui/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/graphql-ui/;
 		}
 
 		location /graphql/ {
