Added changes to portal

--- a/portal.conf
+++ b/portal.conf
@@ -9,10 +9,22 @@ server {
 			proxy_pass http://agr.api.server:8080/index.html;
 		}
 
+		location /api {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/index.html;
+		}
+
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/api/;
+		}
+
+		location /swagger-ui {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/swagger-ui/;
 		}
 
 		location /swagger-ui/ {
@@ -22,6 +34,11 @@ server {
 		}
 
 		location /graphql-ui/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/graphql-ui/;
+		}
+		location /graphql-ui {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/graphql-ui/;
