--- a/portal.conf
+++ b/portal.conf
@@ -8,46 +8,27 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/index.html;
 		}
-
-		location /api {
+		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/index.html;
+			proxy_pass http://agr.api.server:8080/swagger-ui/;
 		}
-
+		location /api/graphql-ui/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.api.server:8080/graphql-ui/;
+		}
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.api.server:8080/api/;
 		}
 
-		location /swagger-ui {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/swagger-ui/;
-		}
 
-		location /swagger-ui/ {
+		location /graphql {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/swagger-ui/;
-		}
-
-		location /graphql-ui/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/graphql-ui/;
-		}
-		location /graphql-ui {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/graphql-ui/;
-		}
-
-		location /graphql/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
+			proxy_pass http://agr.neo4j.qc.server:7474/graphql;
 		}
 
 		location /neo4j_nqc/ {
