--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -2,7 +2,7 @@ server {
 	listen 80;
 		server_name dev.alliancegenome.org;
 		location / {
-			proxy_set_header Host $host;
+			proxy_set_header Host dev.alliancegenome.org;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.nginx.server.dev:80;
 		}
@@ -11,7 +11,7 @@ server {
 #	listen 80;
 #		server_name staging.alliancegenome.org;
 #		location / {
-#			proxy_set_header Host $host;
+#			proxy_set_header Host staging.alliancegenome.org;
 #			proxy_set_header X-Real-IP $remote_addr;
 #			proxy_pass http://agr.nginx.server.staging:4006;
 #		}
@@ -20,7 +20,7 @@ server {
 #	listen 80;
 #		server_name www.alliancegenome.org;
 #		location / {
-#			proxy_set_header Host $host;
+#			proxy_set_header Host www.alliancegenome.org;
 #			proxy_set_header X-Real-IP $remote_addr;
 #			proxy_pass http://agr.nginx.server.prod:4007;
 #		}
