--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -2,9 +2,9 @@ server {
 	listen 80;
 		server_name dev.alliancegenome.org;
 		location / {
-			proxy_set_header Host dev.alliancegenome.org;
+			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.dev:80;
+			proxy_pass http://agr.nginx.server.dev;
 		}
 }
 #server {
