--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -2,9 +2,12 @@ server {
 	listen 80;
 		server_name dev.alliancegenome.org;
 		location / {
+			proxy_pass http://agr.nginx.server.dev;
+			proxy_redirect off;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.dev;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Host $server_name;
 		}
 }
 #server {
