Added host back

--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -2,6 +2,7 @@ server {
 	listen 80;
 		server_name dev.alliancegenome.org;
 		location / {
+			proxy_set_header Host $host;
 			proxy_pass http://agr.nginx.server.dev;
 		}
 }
