--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -3,6 +3,7 @@ server {
 		server_name dev.alliancegenome.org;
 		location / {
 			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.nginx.server.dev;
 		}
 }
