Back to original

--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -4,7 +4,7 @@ server {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.dev;
+			proxy_pass http://agr.nginx.server.dev:80;
 		}
 }
 #server {
