--- a/Dockerfile_prod
+++ b/Dockerfile_prod
@@ -2,4 +2,4 @@ FROM nginx
 
 WORKDIR /etc/nginx/conf.d
 
-ADD prod_webserver.conf /etc/nginx/conf.d/default.conf
+ADD prod_webserver.conf /etc/nginx/conf.d
