Added kibana server

--- a/portal.conf
+++ b/portal.conf
@@ -45,6 +45,11 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.elasticsearch.server:9200/;
 		}
+		location /kibana/ {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.kibana.server:5601/;
+		}
 
 		location /graphql_nqc/ {
 			proxy_set_header Host $host;
