Removed trailing slash

--- a/portal.conf
+++ b/portal.conf
@@ -50,10 +50,10 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.kibana.server:5601/;
 		}
-		location /app/kibana/ {
+		location /app/kibana {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.kibana.server:5601/app/kibana/;
+			proxy_pass http://agr.kibana.server:5601/app/kibana;
 		}
 
 		location /graphql_nqc/ {
