Added kibana redirects

--- a/portal.conf
+++ b/portal.conf
@@ -45,11 +45,15 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.elasticsearch.server:9200/;
 		}
-		location /kibana/ {
+
+		location ~ (/app/kibana|/ui|/bundles/|/kibana|/status|/plugins) {
+			proxy_pass http://agr.kibana.server:5601/;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.kibana.server:5601/;
-			proxy_redirect default;
+			rewrite /kibana/(.*)$ /$1 break;
 		}
 
 		location /graphql_nqc/ {
