--- a/portal.conf
+++ b/portal.conf
@@ -47,7 +47,7 @@ server {
 		}
 
 		location ~ (/app/kibana|/ui|/bundles/|/kibana|/status|/plugins) {
-			proxy_pass http://agr.kibana.server:5601/;
+			proxy_pass http://agr.kibana.server:5601;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
