--- a/portal.conf
+++ b/portal.conf
@@ -28,44 +28,45 @@ server {
 			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
 		}
 
-		location /neo4j_nqc/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.nqc.server:7474/;
-		}
-
-		location /neo4j_qc/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/;
-		}
-
 		location /es/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.elasticsearch.server:9200/;
 		}
-
-		location ~ (/app/kibana|/ui|/bundles/|/kibana|/status|/plugins) {
-			proxy_pass http://agr.kibana.server:5601;
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			rewrite /kibana/(.*)$ /$1 break;
-		}
-
-		location /graphql_nqc/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.nqc.server:7474/graphql/;
-		}
-
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.ui.server:2992;
 		}
 }
+
+server {
+	listen 81;
+		location / {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.kibana.server:5601/;
+		}
+}
+
+server {
+	listen 82;
+		location / {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.neo4j.qc.server:7474/;
+		}
+}
+
+#		location /neo4j_nqc/ {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.neo4j.nqc.server:7474/;
+#		}
+#
+#		location /graphql_nqc/ {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.neo4j.nqc.server:7474/graphql/;
+#		}
 
