--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -1,12 +1,33 @@
 server {
 	listen 80;
-		server_name dev.alliancegenome.org;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.nginx.server.dev;
-		}
+	server_name dev.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.nginx.server.dev:80;
+	}
 }
+server {
+	listen 80;
+	server_name kibana.dev.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.nginx.server.dev:81;
+	}
+}
+
+server {
+	listen 80;
+	server_name neo4j.dev.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.nginx.server.dev:82;
+	}
+}
+
+
 #server {
 #	listen 80;
 #		server_name staging.alliancegenome.org;
