Added ES Dev Site

--- a/portal.conf
+++ b/portal.conf
@@ -28,11 +28,6 @@ server {
 			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
 		}
 
-		location /es/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.elasticsearch.server:9200/;
-		}
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -56,6 +51,15 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.neo4j.qc.server:7474/;
 		}
+}
+
+server {
+	listen 83;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.elasticsearch.server:9200/;
+	}
 }
 
 #		location /neo4j_nqc/ {
