--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -27,6 +27,16 @@ server {
 	}
 }
 
+server {
+	listen 80;
+	server_name es.dev.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.nginx.server.dev:83;
+	}
+}
+
 
 #server {
 #	listen 80;
