Added files for nginx reorg

--- a/stage_webserver.conf
+++ b/stage_webserver.conf
@@ -4,34 +4,34 @@ server {
 		location /api/index.html {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.api.server:8080/index.html;
+			proxy_pass http://agr.api.server:8080/index.html;
 		}
 		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.api.server:8080/swagger-ui/;
+			proxy_pass http://agr.api.server:8080/swagger-ui/;
 		}
 		location /api/graphql-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.api.server:8080/graphql-ui/;
+			proxy_pass http://agr.api.server:8080/graphql-ui/;
 		}
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.api.server:8080/api/;
+			proxy_pass http://agr.api.server:8080/api/;
 		}
 
 		location /graphql/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.neo4j.qc.server:7474/graphql/;
+			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
 		}
 
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.ui.server:2992;
+			proxy_pass http://agr.ui.server:2992;
 		}
 }
 
@@ -49,7 +49,7 @@ server {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.neo4j.qc.server:7474/;
+			proxy_pass http://agr.neo4j.qc.server:7474/;
 		}
 }
 
@@ -58,7 +58,7 @@ server {
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.prod.elasticsearch.server:9200/;
+		proxy_pass http://agr.elasticsearch.server:9200/;
 	}
 }
 
