Added build sub domain

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -37,6 +37,16 @@ server {
 	}
 }
 
+server {
+	listen 80;
+		server_name build.alliancegenome.org;
+		location / {
+			proxy_set_header Host build.alliancegenome.org;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.build.nginx.server.build:80;
+		}
+}
+
 
 #server {
 #	listen 80;
