Added to build network

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -43,7 +43,7 @@ server {
 		location / {
 			proxy_set_header Host build.alliancegenome.org;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.build.nginx.server:80;
+			proxy_pass http://agr.build.nginx.server.build:80;
 		}
 }
 
