Fix for Nginx server on multiple networks

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -1,5 +1,14 @@
 server {
 	listen 80;
+	server_name build.alliancegenome.org;
+	location / {
+		proxy_set_header Host build.alliancegenome.org;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.build.nginx.server.build:80;
+	}
+}
+server {
+	listen 80;
 	server_name dev.alliancegenome.org;
 	location / {
 		proxy_set_header Host $host;
@@ -39,30 +48,19 @@ server {
 
 #server {
 #	listen 80;
-#		server_name build.alliancegenome.org;
-#		location / {
-#			proxy_set_header Host build.alliancegenome.org;
-#			proxy_set_header X-Real-IP $remote_addr;
-#			proxy_pass http://agr.build.nginx.server.build:80;
-#		}
-#}
-
-
-#server {
-#	listen 80;
-#		server_name staging.alliancegenome.org;
-#		location / {
-#			proxy_set_header Host staging.alliancegenome.org;
-#			proxy_set_header X-Real-IP $remote_addr;
-#			proxy_pass http://agr.nginx.server.staging:4006;
-#		}
+#	server_name staging.alliancegenome.org;
+#	location / {
+#		proxy_set_header Host staging.alliancegenome.org;
+#		proxy_set_header X-Real-IP $remote_addr;
+#		proxy_pass http://agr.nginx.server.staging:4006;
+#	}
 #}
 #server {
 #	listen 80;
-#		server_name www.alliancegenome.org;
-#		location / {
-#			proxy_set_header Host www.alliancegenome.org;
-#			proxy_set_header X-Real-IP $remote_addr;
-#			proxy_pass http://agr.nginx.server.prod:4007;
-#		}
+#	server_name www.alliancegenome.org;
+#	location / {
+#		proxy_set_header Host www.alliancegenome.org;
+#		proxy_set_header X-Real-IP $remote_addr;
+#		proxy_pass http://agr.nginx.server.prod:4007;
+#	}
 #}
