Removed internal servers

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -13,36 +13,7 @@ server {
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.nginx.server.dev:80;
-	}
-}
-server {
-	listen 80;
-	server_name kibana.dev.alliancegenome.org;
-	location / {
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.nginx.server.dev:81;
-	}
-}
-
-server {
-	listen 80;
-	server_name neo4j.dev.alliancegenome.org;
-	location / {
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.nginx.server.dev:82;
-	}
-}
-
-server {
-	listen 80;
-	server_name es.dev.alliancegenome.org;
-	location / {
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.nginx.server.dev:83;
+		proxy_pass http://agr.dev.nginx.server.dev:80;
 	}
 }
 
