Added kibana domain

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -17,6 +17,17 @@ server {
 	}
 }
 
+server {
+	listen 80;
+	server_name kibana.dev.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.kibana.server.lognet:5601/;
+	}
+}
+
+
 #server {
 #	listen 80;
 #	server_name staging.alliancegenome.org;
