--- a/dev_webserver.conf
+++ b/dev_webserver.conf
@@ -35,6 +35,16 @@ server {
 		}
 }
 
+server {
+	listen 81;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.kibana.server:5601/;
+	}
+}
+
+
 #		location /neo4j_nqc/ {
 #			proxy_set_header Host $host;
 #			proxy_set_header X-Real-IP $remote_addr;
