--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -16,17 +16,25 @@ server {
 		proxy_pass http://agr.dev.nginx.server.dev:80;
 	}
 }
-
 server {
 	listen 80;
 	server_name kibana.dev.alliancegenome.org;
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.kibana.server.lognet:5601/;
+		proxy_pass http://agr.dev.nginx.server.dev:81;
 	}
 }
 
+server {
+	listen 80;
+	server_name logs.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.kibana.server.lognet:5601/;
+	}
+}
 
 #server {
 #	listen 80;
