Added ports for build

--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -36,10 +36,13 @@ server {
 }
 
 server {
-	listen 83;
+	listen 81;
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.build.elasticsearch.server:9200/;
+		proxy_pass http://agr.build.kibana.server:5601/;
 	}
 }
+
+
+
