--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -7,6 +7,17 @@ server {
 		proxy_pass http://agr.build.nginx.server.build:80;
 	}
 }
+
+server {
+	listen 80;
+	server_name kibana.build.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.build.nginx.server.build:81;
+	}
+}
+
 server {
 	listen 80;
 	server_name dev.alliancegenome.org;
@@ -16,6 +27,7 @@ server {
 		proxy_pass http://agr.dev.nginx.server.dev:80;
 	}
 }
+
 server {
 	listen 80;
 	server_name kibana.dev.alliancegenome.org;
