Switched from ui server to local files

--- a/dev_webserver.conf
+++ b/dev_webserver.conf
@@ -27,12 +27,14 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.dev.neo4j.qc.server:7474/graphql/;
 		}
-
 		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.ui.server:2992;
+			root /nginx;
 		}
+		#location / {
+		#	proxy_set_header Host $host;
+		#	proxy_set_header X-Real-IP $remote_addr;
+		#	proxy_pass http://agr.dev.ui.server:2992;
+		#}
 }
 
 server {
