Fix to turn dev back on

--- a/dev_webserver.conf
+++ b/dev_webserver.conf
@@ -28,13 +28,11 @@ server {
 			proxy_pass http://agr.dev.neo4j.qc.server:7474/graphql/;
 		}
 		location / {
-			root /nginx;
+		#	root /nginx;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.dev.ui.server:2992;
 		}
-		#location / {
-		#	proxy_set_header Host $host;
-		#	proxy_set_header X-Real-IP $remote_addr;
-		#	proxy_pass http://agr.dev.ui.server:2992;
-		#}
 }
 
 server {
