--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -21,7 +21,10 @@ server {
 			proxy_pass http://agr.build.api.server:8080/api/;
 		}
 		location / {
-			root /nginx;
+		#	root /nginx;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_pass http://agr.build.ui.server:2992;
 		}
 }
 
