Changed stage server names

--- a/stage_webserver.conf
+++ b/stage_webserver.conf
@@ -4,61 +4,44 @@ server {
 		location /api/index.html {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/index.html;
+			proxy_pass http://agr.stage.api.server:8080/index.html;
 		}
 		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/swagger-ui/;
+			proxy_pass http://agr.stage.api.server:8080/swagger-ui/;
 		}
 		location /api/graphql-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/graphql-ui/;
+			proxy_pass http://agr.stage.api.server:8080/graphql-ui/;
 		}
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.api.server:8080/api/;
+			proxy_pass http://agr.stage.api.server:8080/api/;
 		}
 
 		location /graphql/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/graphql/;
+			proxy_pass http://agr.stage.neo4j.qc.server:7474/graphql/;
 		}
 
 		location / {
+		#	root /nginx;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.ui.server:2992;
+			proxy_pass http://agr.stage.ui.server:2992;
 		}
 }
 
 server {
 	listen 81;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.kibana.server:5601/;
-		}
-}
-
-server {
-	listen 82;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.neo4j.qc.server:7474/;
-		}
-}
-
-server {
-	listen 83;
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.elasticsearch.server:9200/;
+		proxy_pass http://agr.stage.kibana.server:5601/;
 	}
 }
 
