Added stage to the portal

--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -40,6 +40,27 @@ server {
 
 server {
 	listen 80;
+	server_name stage.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.nginx.server.dev:80;
+	}
+}
+
+server {
+	listen 80;
+	server_name kibana.stage.alliancegenome.org;
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.nginx.server.stage:81;
+	}
+}
+
+
+server {
+	listen 80;
 	server_name logs.alliancegenome.org;
 	location / {
 		proxy_set_header Host $host;
@@ -48,15 +69,6 @@ server {
 	}
 }
 
-#server {
-#	listen 80;
-#	server_name staging.alliancegenome.org;
-#	location / {
-#		proxy_set_header Host staging.alliancegenome.org;
-#		proxy_set_header X-Real-IP $remote_addr;
-#		proxy_pass http://agr.nginx.server.staging:4006;
-#	}
-#}
 #server {
 #	listen 80;
 #	server_name www.alliancegenome.org;
