--- a/portal_webserver.conf
+++ b/portal_webserver.conf
@@ -44,7 +44,7 @@ server {
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.stage.nginx.server.dev:80;
+		proxy_pass http://agr.stage.nginx.server.stage:80;
 	}
 }
 
