--- a/stage_webserver.conf
+++ b/stage_webserver.conf
@@ -1,47 +1,60 @@
 server {
 	listen 80;
-
-		location /api/index.html {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.api.server:8080/index.html;
-		}
-		location /api/swagger-ui/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.api.server:8080/swagger-ui/;
-		}
-		location /api/graphql-ui/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.api.server:8080/graphql-ui/;
-		}
-		location /api/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.api.server:8080/api/;
-		}
-
-		location /graphql/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.neo4j.qc.server:7474/graphql/;
-		}
-
-		location / {
-		#	root /nginx;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.stage.ui.server:2992;
-		}
+	server_name stage.alliancegenome.org;
+	location /api/index.html {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.api.server:8080/index.html;
+	}
+	location /api/swagger-ui/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.api.server:8080/swagger-ui/;
+	}
+	location /api/graphql-ui/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.api.server:8080/graphql-ui/;
+	}
+	location /api/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.api.server:8080/api/;
+	}
+	location /graphql/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.neo4j.qc.server:7474/graphql/;
+	}
+	location / {
+	#	root /nginx;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.ui.server:2992;
+	}
 }
 
 server {
-	listen 81;
+	listen 80;
+	server_name kibana.stage.alliancegenome.org;
 	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_pass http://agr.stage.kibana.server:5601/;
+	}
+}
+
+server {
+	listen 80;
+	server_name es.stage.alliancegenome.org;
+	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.stage.elasticsearch.server:9200/;
 	}
 }
 
