Switched over prod to new

--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -1,5 +1,6 @@
 server {
 	listen 80;
+	server_name prod.alliancegenome.org;
 
 		location /api/index.html {
 			proxy_set_header Host $host;
@@ -21,13 +22,11 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.prod.api.server:8080/api/;
 		}
-
 		location /graphql/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.prod.neo4j.qc.server:7474/graphql/;
 		}
-
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -36,26 +35,23 @@ server {
 }
 
 server {
-	listen 81;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.kibana.server:5601/;
-		}
-}
-
-server {
-	listen 82;
-		location / {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prod.neo4j.qc.server:7474/;
-		}
-}
-
-server {
-	listen 83;
+	listen 80;
+	server_name kibana.prod.alliancegenome.org;
 	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.prod.kibana.server:5601/;
+	}
+}
+
+server {
+	listen 80;
+	server_name es.prod.alliancegenome.org;
+	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_pass http://agr.prod.elasticsearch.server:9200/;
