Removed neo from build

--- a/prodbuild_webserver.conf
+++ b/prodbuild_webserver.conf
@@ -22,11 +22,6 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_pass http://agr.prodbuild.api.server:8080/api/;
 		}
-		location /graphql/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.neo4j.qc.server:7474/graphql/;
-		}
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
@@ -58,6 +53,12 @@ server {
 	}
 }
 
+
+#		location /graphql/ {
+#			proxy_set_header Host $host;
+#			proxy_set_header X-Real-IP $remote_addr;
+#			proxy_pass http://agr.prodbuild.neo4j.qc.server:7474/graphql/;
+#		}
 #		location /neo4j_nqc/ {
 #			proxy_set_header Host $host;
 #			proxy_set_header X-Real-IP $remote_addr;
