--- a/dev_webserver.conf
+++ b/dev_webserver.conf
@@ -1,49 +1,65 @@
 server {
 	listen 80;
+	server_name dev.alliancegenome.org;
 
-		location /api/index.html {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.api.server:8080/index.html;
-		}
-		location /api/swagger-ui/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.api.server:8080/swagger-ui/;
-		}
-		location /api/graphql-ui/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.api.server:8080/graphql-ui/;
-		}
-		location /api/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.api.server:8080/api/;
-		}
-
-		location /graphql/ {
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.neo4j.qc.server:7474/graphql/;
-		}
-		location / {
-		#	root /nginx;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.dev.ui.server:2992;
-		}
+	location /api/index.html {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.api.server:8080/index.html;
+	}
+	location /api/swagger-ui/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.api.server:8080/swagger-ui/;
+	}
+	location /api/graphql-ui/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.api.server:8080/graphql-ui/;
+	}
+	location /api/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.api.server:8080/api/;
+	}
+	location /graphql/ {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.neo4j.qc.server:7474/graphql/;
+	}
+	location / {
+	#	root /nginx;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.ui.server:2992;
+	}
 }
 
 server {
-	listen 81;
+	listen 80;
+	server_name kibana.dev.alliancegenome.org;
 	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_pass http://agr.dev.kibana.server:5601/;
 	}
 }
 
+server {
+	listen 80;
+	server_name es.dev.alliancegenome.org;
+	location / {
+		auth_basic            "Restricted";
+		auth_basic_user_file  /etc/nginx/.htpasswd;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_pass http://agr.dev.elasticsearch.server:9200/;
+	}
+}
+
+#
 
 #		location /neo4j_nqc/ {
 #			proxy_set_header Host $host;
