Added new server scheme

--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -1,21 +1,27 @@
 http {
 	upstream kibana {
-		server agr.production.kibana.server.0;
-		server agr.production.kibana.server.1;
-		server agr.production.kibana.server.2;
-		server agr.production.kibana.server.3;
+		server agr.production.kibana.server0;
+		server agr.production.kibana.server1;
+		server agr.production.kibana.server2;
+		server agr.production.kibana.server3;
 	}
 	upstream es {
-		server agr.production.elasticsearch.server.0;
-		server agr.production.elasticsearch.server.1;
-		server agr.production.elasticsearch.server.2;
-		server agr.production.elasticsearch.server.3;
+		server agr.production.elasticsearch.server0;
+		server agr.production.elasticsearch.server1;
+		server agr.production.elasticsearch.server2;
+		server agr.production.elasticsearch.server3;
 	}
 	upstream api {
-		server agr.production.api.server.0;
-		server agr.production.api.server.1;
-		server agr.production.api.server.2;
-		server agr.production.api.server.3;
+		server agr.production.api.server0;
+		server agr.production.api.server1;
+		server agr.production.api.server2;
+		server agr.production.api.server3;
+	}
+	upstream ui {
+		server agr.production.ui.server0;
+		server agr.production.ui.server1;
+		server agr.production.ui.server2;
+		server agr.production.ui.server3;
 	}
 
 	server {
@@ -40,7 +46,7 @@ http {
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.production.ui.server:2992;
+			proxy_pass http://ui:2992;
 		}
 	}
 
