switches where ports were

--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -11,16 +11,16 @@
 		server agr.production.elasticsearch.server3;
 	}
 	upstream api {
-		server agr.production.api.server0;
-		server agr.production.api.server1;
-		server agr.production.api.server2;
-		server agr.production.api.server3;
+		server agr.production.api.server0:8080;
+		server agr.production.api.server1:8080;
+		server agr.production.api.server2:8080;
+		server agr.production.api.server3:8080;
 	}
 	upstream ui {
-		server agr.production.ui.server0;
-		server agr.production.ui.server1;
-		server agr.production.ui.server2;
-		server agr.production.ui.server3;
+		server agr.production.ui.server0:2992;
+		server agr.production.ui.server1:2992;
+		server agr.production.ui.server2:2992;
+		server agr.production.ui.server3:2992;
 	}
 
 	server {
@@ -30,22 +30,22 @@
 		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://api:8080/swagger-ui/;
+			proxy_pass http://api/swagger-ui/;
 		}
 		location /api/graphql-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://api:8080/graphql-ui/;
+			proxy_pass http://api/graphql-ui/;
 		}
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://api:8080/api/;
+			proxy_pass http://api/api/;
 		}
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://ui:2992;
+			proxy_pass http://ui;
 		}
 	}
 
