Moved more ports around

--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -1,14 +1,14 @@
 	upstream kibana {
-		server agr.production.kibana.server0;
-		server agr.production.kibana.server1;
-		server agr.production.kibana.server2;
-		server agr.production.kibana.server3;
+		server agr.production.kibana.server0:5601;
+		server agr.production.kibana.server1:5601;
+		server agr.production.kibana.server2:5601;
+		server agr.production.kibana.server3:5601;
 	}
 	upstream es {
-		server agr.production.elasticsearch.server0;
-		server agr.production.elasticsearch.server1;
-		server agr.production.elasticsearch.server2;
-		server agr.production.elasticsearch.server3;
+		server agr.production.elasticsearch.server0:9200;
+		server agr.production.elasticsearch.server1:9200;
+		server agr.production.elasticsearch.server2:9200;
+		server agr.production.elasticsearch.server3:9200;
 	}
 	upstream api {
 		server agr.production.api.server0:8080;
@@ -57,7 +57,7 @@
 			auth_basic_user_file  /etc/nginx/.htpasswd;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://kibana:5601/;
+			proxy_pass http://kibana/;
 		}
 	}
 
@@ -69,7 +69,7 @@
 			auth_basic_user_file  /etc/nginx/.htpasswd;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://es:9200/;
+			proxy_pass http://es/;
 		}
 	}
 
