--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -73,6 +73,11 @@
 		}
 	}
 
+	server {
+		listen 80;
+		server_name jira.alliancegenome.org;
+		rewrite ^/(.*)$ https://agr-jira.atlassian.net/$1 redirect;
+	}
 
 #		location /graphql/ {
 #			proxy_set_header Host $host;
