Added gzip to all the server configs

--- a/prod_webserver.conf
+++ b/prod_webserver.conf
@@ -1,6 +1,7 @@
 server {
 	listen 80;
 	server_name prod.alliancegenome.org;
+	gzip on;
 
 		location /api/index.html {
 			proxy_set_header Host $host;
@@ -37,6 +38,7 @@ server {
 server {
 	listen 80;
 	server_name kibana.prod.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -49,6 +51,7 @@ server {
 server {
 	listen 80;
 	server_name es.prod.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
