--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -26,6 +26,7 @@
 	server {
 		listen 80;
 		server_name www.alliancegenome.org;
+		gzip on;
 
 		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
@@ -52,6 +53,7 @@
 	server {
 		listen 80;
 		server_name kibana.alliancegenome.org;
+		gzip on;
 		location / {
 			auth_basic            "Restricted";
 			auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -64,6 +66,7 @@
 	server {
 		listen 80;
 		server_name es.alliancegenome.org;
+		gzip on;
 		location / {
 			auth_basic            "Restricted";
 			auth_basic_user_file  /etc/nginx/.htpasswd;
