--- a/testbuild_webserver.conf
+++ b/testbuild_webserver.conf
@@ -1,6 +1,7 @@
 server {
 	listen 80;
 	server_name testbuild.alliancegenome.org;
+	gzip on;
 
 		location /api/index.html {
 			proxy_set_header Host $host;
@@ -32,6 +33,7 @@ server {
 server {
 	listen 80;
 	server_name kibana.testbuild.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -44,6 +46,7 @@ server {
 server {
 	listen 80;
 	server_name es.testbuild.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
