--- a/dev_webserver.conf
+++ b/dev_webserver.conf
@@ -1,6 +1,7 @@
 server {
 	listen 80;
 	server_name dev.alliancegenome.org;
+	gzip on;
 
 	location /api/index.html {
 		proxy_set_header Host $host;
@@ -38,6 +39,7 @@ server {
 server {
 	listen 80;
 	server_name kibana.dev.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -50,6 +52,7 @@ server {
 server {
 	listen 80;
 	server_name es.dev.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
