--- a/devbuild_webserver.conf
+++ b/devbuild_webserver.conf
@@ -1,6 +1,7 @@
 server {
 	listen 80;
 	server_name build.alliancegenome.org devbuild.alliancegenome.org;
+	gzip on;
 
 	location /api/index.html {
 		proxy_set_header Host $host;
@@ -32,6 +33,7 @@ server {
 server {
 	listen 80;
 	server_name kibana.devbuild.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -44,6 +46,7 @@ server {
 server {
 	listen 80;
 	server_name es.devbuild.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
