--- a/stage_webserver.conf
+++ b/stage_webserver.conf
@@ -1,6 +1,7 @@
 server {
 	listen 80;
 	server_name stage.alliancegenome.org;
+	gzip on;
 	location /api/index.html {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
@@ -37,6 +38,7 @@ server {
 server {
 	listen 80;
 	server_name kibana.stage.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -49,6 +51,7 @@ server {
 server {
 	listen 80;
 	server_name es.stage.alliancegenome.org;
+	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
