--- a/mgi_webserver.conf
+++ b/mgi_webserver.conf
@@ -26,7 +26,7 @@ server {
 	location /graphql/ {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.mgi.neo4j.qc.server:7474/graphql/;
+		proxy_pass http://agr.mgi.neo4j.server:7474/graphql/;
 	}
 	location / {
 	#	root /nginx;
