Update root entry for site to redirect to www version

--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -25,6 +25,12 @@
 
 	server {
 		listen 80;
+		server_name alliancegenome.org;
+		rewrite ^/(.*)$ http://www.alliancegenome.org/$1 redirect;
+	}
+
+	server {
+		listen 80;
 		server_name www.alliancegenome.org;
 		gzip on;
 
