Fix for production home.ag.org server

--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -28,6 +28,11 @@
 		server_name alliancegenome.org;
 		rewrite ^/(.*)$ http://www.alliancegenome.org/$1 redirect;
 	}
+	server {
+		listen 80;
+		server_name home.alliancegenome.org;
+		rewrite ^/(.*)$ http://www.alliancegenome.org/$1 redirect;
+	}
 
 	server {
 		listen 80;
