Refactored dev boxes

--- a/test_webserver.conf
+++ b/test_webserver.conf
@@ -1,58 +1,58 @@
 server {
 	listen 80;
-	server_name prodbuild.alliancegenome.org;
+	server_name test.alliancegenome.org;
 	gzip on;
 
 		location /api/index.html {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.api.server:8080/index.html;
+			proxy_pass http://agr.test.api.server:8080/index.html;
 		}
 		location /api/swagger-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.api.server:8080/swagger-ui/;
+			proxy_pass http://agr.test.api.server:8080/swagger-ui/;
 		}
 		location /api/graphql-ui/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.api.server:8080/graphql-ui/;
+			proxy_pass http://agr.test.api.server:8080/graphql-ui/;
 		}
 		location /api/ {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.api.server:8080/api/;
+			proxy_pass http://agr.test.api.server:8080/api/;
 		}
 		location / {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://agr.prodbuild.ui.server:2992;
+			proxy_pass http://agr.test.ui.server:2992;
 		}
 }
 
 server {
 	listen 80;
-	server_name kibana.prodbuild.alliancegenome.org;
+	server_name kibana.test.alliancegenome.org;
 	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.prodbuild.kibana.server:5601/;
+		proxy_pass http://agr.test.kibana.server:5601/;
 	}
 }
 
 server {
 	listen 80;
-	server_name es.prodbuild.alliancegenome.org;
+	server_name es.test.alliancegenome.org;
 	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.prodbuild.elasticsearch.server:9200/;
+		proxy_pass http://agr.test.elasticsearch.server:9200/;
 	}
 }
 
@@ -60,7 +60,7 @@ server {
 #		location /graphql/ {
 #			proxy_set_header Host $host;
 #			proxy_set_header X-Real-IP $remote_addr;
-#			proxy_pass http://agr.prodbuild.neo4j.qc.server:7474/graphql/;
+#			proxy_pass http://agr.test.neo4j.qc.server:7474/graphql/;
 #		}
 #		location /neo4j_nqc/ {
 #			proxy_set_header Host $host;
