--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name build.alliancegenome.org devbuild.alliancegenome.org;
+	server_name build.alliancegenome.org dev.alliancegenome.org;
 	gzip on;
 
 	location /api/index.html {
@@ -32,27 +32,27 @@ server {
 
 server {
 	listen 80;
-	server_name kibana.devbuild.alliancegenome.org;
+	server_name kibana.build.alliancegenome.org kibana.dev.alliancegenome.org;
 	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.devbuild.kibana.server:5601/;
+		proxy_pass http://agr.build.kibana.server:5601/;
 	}
 }
 
 server {
 	listen 80;
-	server_name es.devbuild.alliancegenome.org;
+	server_name es.build.alliancegenome.org es.dev.alliancegenome.org;
 	gzip on;
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_pass http://agr.devbuild.elasticsearch.server:9200/;
+		proxy_pass http://agr.build.elasticsearch.server:9200/;
 	}
 }
 
