--- a/production_webserver.conf
+++ b/production_webserver.conf
@@ -78,6 +78,7 @@
 		listen 80;
 		server_name es.alliancegenome.org;
 		gzip on;
+		gzip_types text/html text/plain application/javascript application/x-javascript text/javascript text/xml text/css application/json;
 		location / {
 			auth_basic            "Restricted";
 			auth_basic_user_file  /etc/nginx/.htpasswd;
