Added SSL to build server

--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -1,6 +1,11 @@
 server {
-	listen 80;
+	listen 443;
 	server_name build.alliancegenome.org dev.alliancegenome.org;
+
+	ssl on;
+	ssl_certificate     /etc/ssl/certs/agr.crt;
+	ssl_certificate_key /etc/ssl/certs/agr.key;
+
 	gzip on;
 
 	location /api/index.html {
@@ -28,6 +33,12 @@ server {
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_pass http://agr.build.ui.server:2992;
 	}
+}
+
+server {
+	listen 80;
+	server_name build.alliancegenome.org dev.alliancegenome.org;
+	return 301 https://$server_name$request_uri? permanent;
 }
 
 server {
