--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -36,9 +36,9 @@ server {
 }
 
 server {
-	listen 80;
-	server_name build.alliancegenome.org dev.alliancegenome.org;
-	return 301 https://$server_name$request_uri? permanent;
+	listen			80;
+	server_name		build.alliancegenome.org dev.alliancegenome.org;
+	return			301	https://$server_name$request_uri;
 }
 
 server {
