--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -5,7 +5,6 @@ server {
 	ssl on;
 	ssl_certificate     /etc/ssl/certs/agr.crt;
 	ssl_certificate_key /etc/ssl/certs/agr.key;
-
 	gzip on;
 
 	location /api/index.html {
@@ -42,9 +41,14 @@ server {
 }
 
 server {
-	listen 80;
+	listen 443;
 	server_name kibana.build.alliancegenome.org kibana.dev.alliancegenome.org;
+
+	ssl on;
+	ssl_certificate     /etc/ssl/certs/agr.crt;
+	ssl_certificate_key /etc/ssl/certs/agr.key;
 	gzip on;
+
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -55,9 +59,20 @@ server {
 }
 
 server {
-	listen 80;
+	listen			80;
+	server_name		kibana.build.alliancegenome.org kibana.dev.alliancegenome.org;
+	return			301	https://$server_name$request_uri;
+}
+
+server {
+	listen 443;
 	server_name es.build.alliancegenome.org es.dev.alliancegenome.org;
+
+	ssl on;
+	ssl_certificate     /etc/ssl/certs/agr.crt;
+	ssl_certificate_key /etc/ssl/certs/agr.key;
 	gzip on;
+
 	location / {
 		auth_basic            "Restricted";
 		auth_basic_user_file  /etc/nginx/.htpasswd;
@@ -67,6 +82,11 @@ server {
 	}
 }
 
+server {
+	listen			80;
+	server_name		es.build.alliancegenome.org es.dev.alliancegenome.org;
+	return			301	https://$server_name$request_uri;
+}
 
 #		location /graphql/ {
 #			proxy_set_header Host $host;
