Changed names so SSL will work

--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -42,7 +42,7 @@ server {
 
 server {
 	listen 443;
-	server_name kibana.build.alliancegenome.org kibana.dev.alliancegenome.org;
+	server_name kibanabuild.alliancegenome.org;
 
 	ssl on;
 	ssl_certificate     /etc/ssl/certs/agr.crt;
@@ -60,13 +60,14 @@ server {
 
 server {
 	listen			80;
-	server_name		kibana.build.alliancegenome.org kibana.dev.alliancegenome.org;
-	return			301	https://$server_name$request_uri;
+	server_name		kibana.build.alliancegenome.org;
+	return			301	https://kibanabuild.alliancegenome.org$request_uri;
 }
+
 
 server {
 	listen 443;
-	server_name es.build.alliancegenome.org es.dev.alliancegenome.org;
+	server_name esbuild.alliancegenome.org;
 
 	ssl on;
 	ssl_certificate     /etc/ssl/certs/agr.crt;
@@ -84,9 +85,16 @@ server {
 
 server {
 	listen			80;
-	server_name		es.build.alliancegenome.org es.dev.alliancegenome.org;
-	return			301	https://$server_name$request_uri;
+	server_name		es.build.alliancegenome.org;
+	return			301	https://esbuild.alliancegenome.org$request_uri;
 }
+
+
+
+
+
+
+
 
 #		location /graphql/ {
 #			proxy_set_header Host $host;
