Added non SSL domains to redirect

--- a/build_webserver.conf
+++ b/build_webserver.conf
@@ -60,7 +60,7 @@ server {
 
 server {
 	listen			80;
-	server_name		kibana.build.alliancegenome.org;
+	server_name		kibana.build.alliancegenome.org kibanabuild.alliancegenome.org;
 	return			301	https://kibanabuild.alliancegenome.org$request_uri;
 }
 
@@ -85,7 +85,7 @@ server {
 
 server {
 	listen			80;
-	server_name		es.build.alliancegenome.org;
+	server_name		es.build.alliancegenome.org esbuild.alliancegenome.org;
 	return			301	https://esbuild.alliancegenome.org$request_uri;
 }
 
